frontend/test/should_pass/param_100.grg
using attrib_model_001;

rule r(a:Node, var b:int, -c:Edge->, var d:string)
{
    x : NINT;
    if { x.a == b; }
    modify {
        y:NSTRING;
        eval {
            y.a = d;
        }
    }
}
