frontend/test/should_fail/param_100.grg
using attrib_model_001;

rule r(a:Node, var b:int, -c:Edge->, var d:string)
{
    x : NSTRING;
    if { x.a == b; }    // b is implicitly converted to string (that's OK)
    modify {
        y:NINT;
        eval {
            y.a = d;    // incompatible assignment from string to int
        }
    }
}
